# subtone

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
KiCad/: fp-lib-table  subtone.kicad_pcb  subtone.kicad_pro  subtone.kicad_sch  sym-lib-table
KiCad/Modules.pretty/: 128x64OLED.kicad_mod  MODULE14P-SMD-2.54-21X17.8MM.kicad_mod
OpenSCAD/: case.scad  case.stl
src/: encoder.rs  main.rs
