[package]
edition = "2021"
name = "subtone"
version = "0.1.0"
license = "MIT"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.2.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-time = { version = "0.1.2", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }

ssd1306 = "0.8.0"
fixed = "1.23.1"
pio-proc = "0.2"
pio = "0.2.1"
static_cell = "1.2.0"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"

[build-dependencies]
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "5d5cd2371504915a531e669dce3558485a51a2e1" }
# embassy-embedded-hal = { version="*", path="../embassy/embassy-embedded-hal/" }
# embassy-sync = { path="../embassy/embassy-sync/" }
# embassy-executor = { path="../embassy/embassy-executor/" }
# embassy-time = { path="../embassy/embassy-time/" }
# embassy-rp = { path="../embassy/embassy-rp/" }
# embassy-futures = { path="../embassy/embassy-futures/" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
strip = 'debuginfo'

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

[features]
default = []
call-tone = []
